removed new settings

--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -4,9 +4,6 @@ autoUpdate:
 bootConfigURL: https://github.com/hibobio/environment-hibob-stage-dev-new-dev
 cluster:
   clusterName: hibob-stage-dev-new
-  devEnvApprovers:
-  - iftachsc@cloudzone.io
-  - admins@hibob.com
   environmentGitOwner: hibobio
   gitKind: github
   gitName: github
@@ -74,9 +71,7 @@ storage:
     url: s3://hibob-jenkinsx/repository
 terraform: true
 vault: {}
-velero:
-  schedule: ""
-  ttl: ""
+velero: {}
 versionStream:
   ref: v1.0.334
   url: https://github.com/jenkins-x/jenkins-x-versions.git
