--- a/env/jenkins-x-platform/values.tmpl.yaml
+++ b/env/jenkins-x-platform/values.tmpl.yaml
@@ -1084,9 +1084,9 @@ jenkins:
             Image: 242867168342.dkr.ecr.eu-west-1.amazonaws.com/slave_nodejs:latest
             Privileged: true
             RequestCpu: "500m"
-            RequestMemory: "500Mi"
+            RequestMemory: "1Gi"
             LimitCpu: "1"
-            LimitMemory: "1Gi"
+            LimitMemory: "4Gi"
             # You may want to change this to true while testing a new image
             # AlwaysPullImage: true
             Command: "/bin/sh -c"
