--- a/env/jenkins-x-platform/values.tmpl.yaml
+++ b/env/jenkins-x-platform/values.tmpl.yaml
@@ -1083,10 +1083,10 @@ jenkins:
           nodejs:
             Image: 242867168342.dkr.ecr.eu-west-1.amazonaws.com/slave_nodejs:latest
             Privileged: true
-            RequestCpu: "500m"
-            RequestMemory: "1Gi"
-            LimitCpu: "1"
-            LimitMemory: "4Gi"
+            RequestCpu: "2"
+            RequestMemory: "4Gi"
+            LimitCpu: "2"
+            LimitMemory: "6Gi"
             # You may want to change this to true while testing a new image
             # AlwaysPullImage: true
             Command: "/bin/sh -c"
