--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -73,7 +73,7 @@ storage:
     url: s3://hibob-jenkinsx/reports
   repository:
     enabled: true
-    url: s3://jenkinsx-charts
+    url: s3://jenkinsx-charts?region=eu-west-1
 terraform: true
 vault: {}
 velero:
