--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -5,3 +5,9 @@ dependencies:
   url: https://github.com/hibobio/notifications.git
   version: ""
   versionURL: ""
+- host: github.com
+  owner: hibobio
+  repo: goals
+  url: https://github.com/hibobio/goals.git
+  version: ""
+  versionURL: ""
