chore(deps): bump https://github.com/hibobio/social.git
Command run was `jx import -m YAML --github`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -17,3 +17,9 @@ dependencies:
   url: https://github.com/hibobio/docs.git
   version: ""
   versionURL: ""
+- host: github.com
+  owner: hibobio
+  repo: social
+  url: https://github.com/hibobio/social.git
+  version: ""
+  versionURL: ""
