chore(deps): bump https://github.com/hibobio/mapping.git
Command run was `jx import -m YAML --github`

--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -23,3 +23,9 @@ dependencies:
   url: https://github.com/hibobio/social.git
   version: ""
   versionURL: ""
+- host: github.com
+  owner: hibobio
+  repo: mapping
+  url: https://github.com/hibobio/mapping.git
+  version: ""
+  versionURL: ""
