--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -35,3 +35,9 @@ dependencies:
   url: https://github.com/hibobio/surveys.git
   version: ""
   versionURL: ""
+- host: github.com
+  owner: hibobio
+  repo: timelog
+  url: https://github.com/hibobio/timelog.git
+  version: ""
+  versionURL: ""
