--- a/env/jxboot-resources/values.tmpl.yaml
+++ b/env/jxboot-resources/values.tmpl.yaml
@@ -72,7 +72,7 @@ gitops:
     repo: "{{ .Environments.staging.repository }}"
     owner: "{{ .Environments.staging.owner | default .Requirements.cluster.environmentGitOwner }}"
     server: ""
-    namespace: {{ .Requirements.cluster.namespace | default "jx" }}-staging
+    namespace: staging
 {{- if hasKey .Environments.staging "remoteCluster" }}
     remote: {{ .Environments.staging.remoteCluster | default "false" }}
 {{- end }}
@@ -81,7 +81,7 @@ gitops:
     repo: "{{ .Environments.production.repository }}"
     owner: "{{ .Environments.production.owner | default .Requirements.cluster.environmentGitOwner }}"
     server: ""
-    namespace: {{ .Requirements.cluster.namespace | default "jx" }}-production
+    namespace: production
 {{- if hasKey .Environments.production "remoteCluster" }}
     remote: {{ .Environments.production.remoteCluster | default "false" }}
 {{- end }}
