chore(deps): bump https://github.com/hibobio/surveys.git
Command run was `jxl project import --no-pack --github`

--- a/repositories/templates/hibobio-surveys-sr.yaml
+++ b/repositories/templates/hibobio-surveys-sr.yaml
@@ -22,8 +22,52 @@ metadata:
     jenkins.io/last-build-number-for-pr-1747: "1"
     jenkins.io/last-build-number-for-pr-1748: "1"
     jenkins.io/last-build-number-for-pr-1749: "1"
+    jenkins.io/last-build-number-for-pr-1752: "6"
+    jenkins.io/last-build-number-for-pr-1753: "5"
+    jenkins.io/last-build-number-for-pr-1754: "1"
+    jenkins.io/last-build-number-for-pr-1755: "1"
+    jenkins.io/last-build-number-for-pr-1756: "3"
+    jenkins.io/last-build-number-for-pr-1757: "2"
+    jenkins.io/last-build-number-for-pr-1758: "7"
+    jenkins.io/last-build-number-for-pr-1759: "1"
+    jenkins.io/last-build-number-for-pr-1760: "1"
+    jenkins.io/last-build-number-for-pr-1761: "1"
+    jenkins.io/last-build-number-for-pr-1762: "1"
+    jenkins.io/last-build-number-for-pr-1763: "4"
+    jenkins.io/last-build-number-for-pr-1764: "1"
+    jenkins.io/last-build-number-for-pr-1765: "1"
+    jenkins.io/last-build-number-for-pr-1766: "2"
+    jenkins.io/last-build-number-for-pr-1767: "2"
+    jenkins.io/last-build-number-for-pr-1768: "3"
+    jenkins.io/last-build-number-for-pr-1769: "1"
+    jenkins.io/last-build-number-for-pr-1770: "1"
+    jenkins.io/last-build-number-for-pr-1771: "3"
+    jenkins.io/last-build-number-for-pr-1772: "1"
+    jenkins.io/last-build-number-for-pr-1773: "1"
+    jenkins.io/last-build-number-for-pr-1774: "6"
+    jenkins.io/last-build-number-for-pr-1775: "4"
+    jenkins.io/last-build-number-for-pr-1776: "1"
+    jenkins.io/last-build-number-for-pr-1777: "1"
+    jenkins.io/last-build-number-for-pr-1778: "2"
+    jenkins.io/last-build-number-for-pr-1779: "1"
+    jenkins.io/last-build-number-for-pr-1780: "1"
+    jenkins.io/last-build-number-for-pr-1781: "1"
+    jenkins.io/last-build-number-for-pr-1782: "1"
+    jenkins.io/last-build-number-for-pr-1783: "2"
+    jenkins.io/last-build-number-for-pr-1784: "1"
+    jenkins.io/last-build-number-for-pr-1785: "1"
+    jenkins.io/last-build-number-for-pr-1786: "1"
+    jenkins.io/last-build-number-for-pr-1787: "2"
+    jenkins.io/last-build-number-for-pr-1788: "3"
+    jenkins.io/last-build-number-for-pr-1789: "3"
+    jenkins.io/last-build-number-for-pr-1790: "1"
+    jenkins.io/last-build-number-for-pr-1791: "1"
+    jenkins.io/last-build-number-for-pr-1792: "1"
   creationTimestamp: null
   labels:
+    jenkins.io/chart-release: repos
+    jenkins.io/namespace: jx
+    jenkins.io/version: "1"
     owner: hibobio
     provider: github
     repository: surveys
