--- a/env/jenkins-x-platform/values.tmpl.yaml
+++ b/env/jenkins-x-platform/values.tmpl.yaml
@@ -902,6 +902,9 @@ jenkins:
         - type: Secret
           secretName: jenkins-docker-cfg
           mountPath: /home/jenkins/.docker
+        - type: Secret
+          secretName: testimio_token
+          mountPath: /home/jenkins/.testimio_token
         EnvVars:
           JENKINS_URL: http://jenkins:8080
           # _JAVA_OPTIONS: '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dsun.zip.disableMemoryMapping=true -XX:+UseParallelGC -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Xms500M -Xmx5G'
@@ -930,7 +933,7 @@ jenkins:
             LimitMemory: "1024Mi"
             Tty: true
           Gradle:
-            Image: gcr.io/jenkinsxio/builder-gradle:latest
+            Image: 242867168342.dkr.ecr.eu-west-1.amazonaws.com/jx-builders/gradle
             Privileged: true
             RequestCpu: "1"
             RequestMemory: "1Gi"
