--- a/env/jenkins-x-platform/values.tmpl.yaml
+++ b/env/jenkins-x-platform/values.tmpl.yaml
@@ -6,7 +6,7 @@ dockerRegistry: "{{ .Requirements.cluster.registry }}"
 expose:
   enabled: true
 
-JXBasicAuth: "{{ .Parameters.adminUser.username }}:{SHA}{{ .Parameters.adminUser.password | hashPassword }}"
+JXBasicAuth: "{{ .Parameters.adminUser.username }}:{SHA}{{ .Parameters.adminUser.password | toString | hashPassword }}"
 
 cleanup:
   enabled: false
