feat: add additionalNamespaces to controllerrole

--- a/env/jenkins-x-platform/values.tmpl.yaml
+++ b/env/jenkins-x-platform/values.tmpl.yaml
@@ -1268,6 +1268,10 @@ controllercommitstatus:
     enabled: false
 
 controllerrole:
+  role:
+    additionalNamespaces:
+    - jx-staging
+    - jx-production
   clusterrole:
     enabled: false
 
