--- a/dependency-matrix/matrix.yaml
+++ b/dependency-matrix/matrix.yaml
@@ -47,3 +47,9 @@ dependencies:
   url: https://github.com/hibobio/hibob-web-client.git
   version: ""
   versionURL: ""
+- host: github.com
+  owner: hibobio
+  repo: payroll
+  url: https://github.com/hibobio/payroll.git
+  version: ""
+  versionURL: ""
