--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -79,6 +79,6 @@ velero:
   schedule: ""
   ttl: ""
 versionStream:
-  ref: v1.0.448
+  ref: 65246c916421a2f193ade5a5d0b46e54c911567c
   url: https://github.com/jenkins-x/jenkins-x-versions.git
 webhook: lighthouse
