update jx gc activities to keep pipelinerins for 24 hours

--- a/env/jenkins-x-platform/values.tmpl.yaml
+++ b/env/jenkins-x-platform/values.tmpl.yaml
@@ -1291,7 +1291,8 @@ gcactivities:
     - "gc"
     - "activities"
     - "--batch-mode"
-    - "--pr-history-limit=30"
+    - "--pipelinerun-age=24h0m0s"
+    - "--pr-history-limit=300"
   cronjob:
     enabled: true
     schedule: "0/30 * * * *"
